# complexity-foundations

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.data  Makefile  README.md  out.ipynb  pyproject.toml  robustness_out.ipynb
.github/workflows/: verify.yml
docs/: decision_log.md  experiments.md  theorems.md
notebooks/: 00_smoke.ipynb  00_smoke.py  _template.ipynb  _template.py  dpll_correlation.ipynb  dpll_correlation.py  gc_phi_homology.ipynb  gc_phi_homology.py  robustness_priors.ipynb  robustness_priors.py  synergy_library.ipynb  synergy_library.py  witness_basics.ipynb  witness_basics.py
src/conway_foundations/coalgebra/: morphisms.py
src/conway_foundations/compositionality/: witness.py
src/conway_foundations/games/: arithmetic.py  canonical.py  core.py  library.py  outcome.py  properties.py  surreal.py
src/conway_foundations/synergy/: __init__.py  metrics.py  metrics_ei.py  metrics_emergence.py  metrics_kl.py  metrics_markov.py  metrics_phi.py  metrics_te.py  pid.py  trajectories.py
src/conway_foundations/topology/: __init__.py  game_complex.py  sat.py  sat_hardness.py
src/conway_foundations/utils/: parallel.py
tests/: test_canonical.py  test_core.py  test_metrics.py  test_pid.py  test_surreal.py  test_topology.py  test_witnesses.py
